2005-09-06  Derek Price  <derek@ximbiot.com>

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14448>.
	* kerberos-client.c (start_kerberos4_server): Pass new root arg to
	make_bufs_from_fds.
	(Patch from <Manuel.Guijarro.AT.cern.ch>.)

	* server.c: Reorganize includes slightly and alphabetize sections.

	* server.c: #include canon-host.h.
	(gserver_authenticate_connection): Print out canon-host errors.
	* subr.c: #include canon-host.h.
	(isThisHost): Print out canon-host errors.

	* parseinfo.c (parse_config): Don't check hostname without client
	or server support.

	* main.c (main): Set cvs_cmd_name before calling parseServerOptions.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* cvs.h (Tmpdir): Remove global decl.
	(get_cvs_tmp_dir, push_env_tmp_dir): New protos.
	* filesubr.c (cvs_temp_file): Use get_cvs_tmp_dir.
	* main.c (Tmpdir): Remove global.
	(tmpdir_cmdline, tmpdir_env): New globals.
	(get_cvs_tmp_dir, push_env_tmp_dir): New functions.
	(main): Discard most tmpdir overhead in favor of new globals and
	functions.
	* parseinfo.c (parse_config): Parse TmpDir.
	* sanity.sh (config4): New tests.
	* server.c (serve_root): Set env TMPDIR after parsing config.  Create
	tmpdir here instead of...
	(serve_co, server): ...either of thse locations.
	(server_cleanup): Use new function in favor of obsolete Tmpdir.

	* sanity.sh (config2): Don't overwrite potentially significant config.

	* sanity.sh (info): Use $tempfile instead of reproducing the regex.

	* sanity.sh (info): Accept `.' in temp file names.

	* main (main): Set the actual PID, not a pointer to a string.

2005-09-04  Derek Price  <derek@ximbiot.com>

	* sanity.sh (config3): Generalize.

	* main.c (main), server.c (serve_root, switch_to_user): Replace putenv
	with GNULIB setenv.
	* sanity.config.sh.in (HAVE_PUTENV): Remove.
	* sanity.sh (env): Remove reference to $HAVE_PUTENV.

	* sanity.sh (tests): Add config2 & config3.

	* server.c (isSamePath, isThisHost): Move to...